add blog as iframe

--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
             <section class="section projects-section" id="projects">
                 <div class="projects-list" id="projects-list"></div>
             </section>
+            <section class="section blog-section" id="blog">
+                <div class="blog-container blog">
+                    <iframe class="blog blog-iframe" src="https://thebaum123.github.io/blog" frameborder="0"></iframe>
+                </div>
+            </section>
         </main>
         <footer></footer>
     </div>
