rename / replace icons and add links(wip)

--- a/index.html
+++ b/index.html
@@ -51,8 +51,35 @@
                     <iframe class="blog blog-iframe" src="https://thebaum123.github.io/blog" frameborder="0"></iframe>
                 </div>
             </section>
+            <section class="section contact-section" id="contact">
+                <div class="icons-wrapper wrapper social-icons">
+                    <a href="https://github.com/TheBaum123">
+                        <img src="images/github.svg" alt="github link">
+                    </a>
+                    <a href="https://discordapp.com/users/799599681280802848">
+                        <img src="images/discord.svg" alt="discord link">
+                    </a>
+                    <a href="https://twitter.com/the_baum123">
+                        <img src="images/x.svg" alt="x link / twitter link">
+                    </a>
+                    <a href="https://chat-app-6bnk.onrender.com/">
+                        <img src="images/chat.svg" alt="chat app link">
+                    </a>
+                </div>
+            </section>
         </main>
-        <footer></footer>
+        <footer>
+            <!-- flaticon attributions:
+                gh icon: Icon made by Pixel perfect from www.flaticon.com
+                https://www.flaticon.com/free-icon/github_2111432
+                dc icon: Icon made by Freepik from www.flaticom.com
+                https://www.flaticon.com/free-icon/discord_5968968
+                x icon: Icon made by Freepik from www.flaticom.com
+                https://www.flaticon.com/free-icon/twitter_5969020
+                messager icon: Icon made by Freepik from www.flaticom.com
+                https://www.flaticon.com/free-icon/messenger_1370907
+            -->
+        </footer>
     </div>
     <script src="scripts/main.js"></script>
 </body>
