--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,11 +13,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
+
 <body style="background-color: #292831;">
     <div id="page-wrapper">
         <header>
             <div id="header-wrapper">
-                <img class="header-item profile-picture header-image" src="images/favicon.ico" alt="TheBaum's profile picture">
+                <img class="header-item profile-picture header-image" src="images/favicon.ico"
+                    alt="TheBaum's profile picture">
                 <nav id="header-nav" class="header-nav header-links">
                     <a class="header-item header-link" href="#about">About</a>
                     <a class="header-item header-link" href="#projects">Projects</a>
@@ -66,21 +69,51 @@
                         <img src="images/chat.svg" alt="chat app link">
                     </a>
                 </div>
+                <div class="contact-form section" id="contact-form-wrapper">
+                    <form action="https://contact-api-lwe8.onrender.com/new/" method="post">
+                        <div class="form-field-wrapper">
+                            <label for="contact-form-email">Email*:</label>
+                            <input type="text" name="email" id="contact-form-email" autocomplete="email"
+                                placeholder="example@example.com" required>
+                        </div>
+                        <div class="form-field-wrapper">
+                            <label for="contact-form-message">Message*:</label>
+                            <textarea name="message" id="contact-form-message"
+                                placeholder="Hello, I wanted to tell you, that..." required></textarea>
+                        </div>
+                        <div class="form-field-wrapper">
+                            <label for="contact-form-phone">Phone:</label>
+                            <input type="tel" name="phone" id="contact-form-phone" autocomplete="tel"
+                                placeholder="+0 123 456 78901">
+                        </div>
+                        <div class="form-field-wrapper">
+                            <label for="contact-form-name">Name:</label>
+                            <input type="text" name="name" id="contact-form-name" autocomplete="name"
+                                placeholder="John Doe">
+                        </div>
+                        <input type="submit">
+                    </form>
+                    <center>* Fields marked with "*" are required.</center>
+                </div>
             </section>
         </main>
         <footer>
-            <!-- flaticon attributions:
-                gh icon: Icon made by Pixel perfect from www.flaticon.com
-                https://www.flaticon.com/free-icon/github_2111432
-                dc icon: Icon made by Freepik from www.flaticom.com
-                https://www.flaticon.com/free-icon/discord_5968968
-                x icon: Icon made by Freepik from www.flaticom.com
-                https://www.flaticon.com/free-icon/twitter_5969020
-                messager icon: Icon made by Freepik from www.flaticom.com
-                https://www.flaticon.com/free-icon/messenger_1370907
-            -->
+            <h3>Atributions:</h3>
+            <br>
+            gh icon: Icon made by Pixel perfect from <a
+                href="https://www.flaticon.com/free-icon/github_2111432">www.flaticon.com</a>
+            <br>
+            dc icon: Icon made by Freepik from <a
+                href="https://www.flaticon.com/free-icon/discord_5968968">www.flaticon.com</a>
+            <br>
+            x icon: Icon made by Freepik from <a
+                href="https://www.flaticon.com/free-icon/twitter_5969020">www.flaticon.com</a>
+            <br>
+            messager icon: Icon made by Freepik from <a
+                href="https://www.flaticon.com/free-icon/messenger_1370907">www.flaticon.com</a>
         </footer>
     </div>
     <script src="scripts/main.js"></script>
 </body>
+
 </html>
