--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <a href="https://github.com/TheBaum123">
                         <img src="images/github.svg" alt="github link">
                     </a>
-                    <a href="https://discordapp.com/users/799599681280802848">
+                    <a href="https://discord.com/users/799599681280802848">
                         <img src="images/discord.svg" alt="discord link">
                     </a>
                     <a href="https://twitter.com/the_baum123">
